# job_hunter

./: .env  .env.template  .gitignore  debug_craw.py  debug_use.py  main.py  project_desc.md  pyproject.toml
data/: jobs.db
data/recipes/: NVIDIA.json  中金公司.json
src/: graph.py  state.py  storage.py
src/nodes/: check_recipe.py  discover_css.py  fast_scrape.py  save_data.py
